--- a/public/maintainer/index.html
+++ b/public/maintainer/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
+  </head>
 
-    <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js" defer></script>
-</head>
-
-<body>
-
-</body>
-
+  <body>
+    <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
+  </body>
 </html>
